force-app/main/default/objects/CRM_Configuracion__c/CRM_Configuracion__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuración personalizada de la aplicación CRM</description>
    <label>CRM Configuracion</label>
</CustomObject>