force-app/main/default/objects/CRM_Configuracion__c/fields/Email_Licitaciones__c.field-meta.xml
<CustomField>
    <fullName>Email_Licitaciones__c</fullName>
    <caseSensitive>true</caseSensitive>
    <defaultValue>&quot;j.moreno@ayesa.com&quot;</defaultValue>
    <description>Email al que se enviarán los correos de petición de ofertas</description>
    <inlineHelpText>Email where the call for bids emails will be sent</inlineHelpText>
    <label>Email Licitaciones</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>