force-app/main/default/objects/CRM_Configuracion__c/fields/Email_Licitaciones_ING__c.field-meta.xml
<CustomField>
    <fullName>Email_Licitaciones_ING__c</fullName>
    <description>Email donde se notificaran las solicitudes de código de oferta de Ingeniería. Se pueden añadir varias direcciones separadas por ;</description>
    <inlineHelpText>Email where engineering offer code requests are notified. You can add multiple addresses separated by ;</inlineHelpText>
    <label>Email Licitaciones ING.</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>