force-app/main/default/objects/CRM_Configuracion__c/fields/Usuario_Integracion__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Integracion__c</fullName>
    <description>Usuario para el que se desactivará la ejecución de triggers y/o reglas de validación</description>
    <label>Usuario Integración</label>
    <length>255</length>
    <type>Text</type>
</CustomField>